src/test/resources/cocos/invalid/naming/ReferenceIsMissing.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'ReferenceIsMissing' {
	block Car :> NeverDefined {
	}

}
